// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Wrap Input Area Display Unwrap to sOHM when gOHM is selected 1`] = `
<div>
  <div
    data-rk=""
  >
    <style>
      [data-rk]{--rk-blurs-modalOverlay:blur(0px);--rk-fonts-body:SFRounded, ui-rounded, "SF Pro Rounded", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";--rk-radii-actionButton:9999px;--rk-radii-connectButton:12px;--rk-radii-menuButton:12px;--rk-radii-modal:24px;--rk-radii-modalMobile:28px;--rk-colors-accentColor:#0E76FD;--rk-colors-accentColorForeground:#FFF;--rk-colors-actionButtonBorder:rgba(0, 0, 0, 0.04);--rk-colors-actionButtonBorderMobile:rgba(0, 0, 0, 0.06);--rk-colors-actionButtonSecondaryBackground:rgba(0, 0, 0, 0.06);--rk-colors-closeButton:rgba(60, 66, 66, 0.8);--rk-colors-closeButtonBackground:rgba(0, 0, 0, 0.06);--rk-colors-connectButtonBackground:#FFF;--rk-colors-connectButtonBackgroundError:#FF494A;--rk-colors-connectButtonInnerBackground:linear-gradient(0deg, rgba(0, 0, 0, 0.03), rgba(0, 0, 0, 0.06));--rk-colors-connectButtonText:#25292E;--rk-colors-connectButtonTextError:#FFF;--rk-colors-connectionIndicator:#30E000;--rk-colors-error:#FF494A;--rk-colors-generalBorder:rgba(0, 0, 0, 0.06);--rk-colors-generalBorderDim:rgba(0, 0, 0, 0.03);--rk-colors-menuItemBackground:rgba(60, 66, 66, 0.1);--rk-colors-modalBackdrop:rgba(0, 0, 0, 0.3);--rk-colors-modalBackground:#FFF;--rk-colors-modalBorder:transparent;--rk-colors-modalText:#25292E;--rk-colors-modalTextDim:rgba(60, 66, 66, 0.3);--rk-colors-modalTextSecondary:rgba(60, 66, 66, 0.6);--rk-colors-profileAction:#FFF;--rk-colors-profileActionHover:rgba(255, 255, 255, 0.5);--rk-colors-profileForeground:rgba(60, 66, 66, 0.06);--rk-colors-selectedOptionBorder:rgba(60, 66, 66, 0.1);--rk-colors-standby:#FFD641;--rk-shadows-connectButton:0px 4px 12px rgba(0, 0, 0, 0.1);--rk-shadows-dialog:0px 8px 32px rgba(0, 0, 0, 0.32);--rk-shadows-profileDetailsAction:0px 2px 6px rgba(37, 41, 46, 0.04);--rk-shadows-selectedOption:0px 2px 6px rgba(0, 0, 0, 0.24);--rk-shadows-selectedWallet:0px 2px 6px rgba(0, 0, 0, 0.12);--rk-shadows-walletLogo:0px 2px 16px rgba(0, 0, 0, 0.16);}
    </style>
    <div>
      <div />
    </div>
    <div
      id="stake-view"
    >
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 Paper-root  css-e20x9a-MuiPaper-root"
        style="transform: none; webkit-transition: transform 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: transform 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
      >
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 MuiGrid-direction-xs-column css-1oficnd-MuiGrid-root"
        >
          <div
            class="MuiGrid-root MuiGrid-item card-header css-ieinjk-MuiGrid-root"
          >
            <div
              class="MuiBox-root css-gg4vpm"
            >
              <div
                class="MuiBox-root css-1xhj18k"
              >
                <h5
                  class="MuiTypography-root MuiTypography-h5 header-text css-903ewo-MuiTypography-root"
                >
                  Wrap / Unwrap
                </h5>
              </div>
              <div
                class="top-right"
              >
                <a
                  aria-label="wsohm-wut"
                  class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-ao3601-MuiTypography-root-MuiLink-root"
                  href="https://docs.olympusdao.finance/main/contracts/tokens#gohm"
                  rel="noopener noreferrer"
                  style="text-decoration: none;"
                  target="_blank"
                >
                  <div
                    class="MuiBox-root css-70qvj9"
                  >
                    <p
                      class="MuiTypography-root MuiTypography-body1 css-69sme-MuiTypography-root"
                    >
                      gOHM
                    </p>
                     
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-1fx2bp7-MuiSvgIcon-root"
                      focusable="false"
                      style="margin-left: 5px;"
                      viewBox="0 0 20 20"
                    >
                      <path
                        d="M4.297 17.445h9.539c1.523 0 2.305-.78 2.305-2.28v-9.58c0-1.507-.782-2.288-2.305-2.288h-9.54c-1.523 0-2.304.773-2.304 2.289v9.578c0 1.508.781 2.281 2.305 2.281Zm.016-.968c-.875 0-1.352-.461-1.352-1.368V5.633c0-.899.477-1.367 1.352-1.367h9.5c.867 0 1.359.468 1.359 1.367v9.476c0 .907-.492 1.368-1.36 1.368h-9.5Zm7.296-4.235c.266 0 .438-.195.438-.476V7.867c0-.344-.188-.492-.492-.492H7.64c-.29 0-.47.172-.47.438 0 .265.188.445.477.445H9.53l1.133-.078-1.055.992-3.382 3.383a.476.476 0 0 0-.149.328c0 .273.18.453.453.453a.47.47 0 0 0 .344-.149L10.25 9.82l.984-1.047-.078 1.282v1.718c0 .29.18.47.453.47Z"
                      />
                    </svg>
                  </div>
                </a>
              </div>
            </div>
          </div>
          <div
            class="MuiGrid-root MuiGrid-item css-ieinjk-MuiGrid-root"
          >
            <div
              class="MuiBox-root css-15i1vgz"
            >
              <div
                class="MuiGrid-root css-1xcwb1n-MuiGrid-root"
              >
                <div
                  class="MuiBox-root css-rjww1q"
                >
                  <div
                    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-1djfsf6-MuiGrid-root"
                  >
                    <div
                      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 css-1ss4yyi-MuiGrid-root"
                    >
                      <div
                        class="Metric-root  css-1xkrsym"
                      >
                        <div
                          class="MuiBox-root css-g45inh"
                        >
                          <p
                            class="MuiTypography-root MuiTypography-body1 Metric-label css-tlko1g-MuiTypography-root"
                          >
                            sOHM Price
                          </p>
                          <p
                            class="MuiTypography-root MuiTypography-body1 Metric-metric css-69sme-MuiTypography-root"
                            style="width: 100%;"
                          >
                            <span
                              class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1l7q9tc-MuiSkeleton-root"
                              style="width: 100%;"
                            />
                          </p>
                        </div>
                      </div>
                    </div>
                    <div
                      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 css-1ss4yyi-MuiGrid-root"
                    >
                      <div
                        class="Metric-root  css-1xkrsym"
                      >
                        <div
                          class="MuiBox-root css-g45inh"
                        >
                          <p
                            class="MuiTypography-root MuiTypography-body1 Metric-label css-tlko1g-MuiTypography-root"
                          >
                            Current Index
                            <div
                              class="MuiBox-root css-w341jy"
                              style="font-size: 14px;"
                            >
                              <div
                                class="MuiBox-root css-0"
                                style="display: inline-flex; justify-content: center; align-self: center;"
                              >
                                <svg
                                  aria-hidden="true"
                                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall info-icon css-1fx2bp7-MuiSvgIcon-root"
                                  focusable="false"
                                  style="margin: 0px 5px; font-size: 1em;"
                                  viewBox="0 0 20 20"
                                >
                                  <path
                                    d="M 10 20 C 15.475 20 20 15.473 20 10 C 20 4.518 15.473 0 9.991 0 C 4.516 0 0 4.518 0 10 C 0 15.475 4.527 20 10 20 Z M 10 18.705 C 5.189 18.714 1.287 14.812 1.297 10.001 C 1.28 5.189 5.179 1.281 9.991 1.285 C 14.807 1.28 18.714 5.182 18.714 9.999 C 18.719 14.811 14.813 18.712 10 18.702 Z M 9.941 6.242 C 10.559 6.242 11.038 5.763 11.038 5.156 C 11.043 4.547 10.549 4.053 9.94 4.058 C 9.334 4.057 8.842 4.55 8.844 5.156 C 8.843 5.761 9.337 6.249 9.941 6.242 Z M 8.216 15.444 L 12.303 15.444 C 12.623 15.444 12.871 15.204 12.871 14.895 C 12.87 14.584 12.615 14.334 12.303 14.338 L 10.868 14.338 L 10.868 8.754 C 10.868 8.346 10.658 8.065 10.269 8.065 L 8.345 8.065 C 7.919 8.045 7.631 8.493 7.826 8.872 C 7.925 9.065 8.128 9.182 8.345 9.172 L 9.652 9.172 L 9.652 14.338 L 8.216 14.338 C 7.905 14.334 7.649 14.584 7.648 14.895 C 7.648 15.204 7.897 15.444 8.216 15.444 Z"
                                  />
                                </svg>
                              </div>
                            </div>
                          </p>
                          <p
                            class="MuiTypography-root MuiTypography-body1 Metric-metric css-69sme-MuiTypography-root"
                            style="width: 100%;"
                          >
                            <span
                              class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1l7q9tc-MuiSkeleton-root"
                              style="width: 100%;"
                            />
                          </p>
                        </div>
                      </div>
                    </div>
                    <div
                      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 css-1ss4yyi-MuiGrid-root"
                    >
                      <div
                        class="Metric-root  css-1xkrsym"
                      >
                        <div
                          class="MuiBox-root css-g45inh"
                        >
                          <p
                            class="MuiTypography-root MuiTypography-body1 Metric-label css-tlko1g-MuiTypography-root"
                          >
                            gOHM Price
                            <div
                              class="MuiBox-root css-w341jy"
                              style="font-size: 14px;"
                            >
                              <div
                                class="MuiBox-root css-0"
                                style="display: inline-flex; justify-content: center; align-self: center;"
                              >
                                <svg
                                  aria-hidden="true"
                                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall info-icon css-1fx2bp7-MuiSvgIcon-root"
                                  focusable="false"
                                  style="margin: 0px 5px; font-size: 1em;"
                                  viewBox="0 0 20 20"
                                >
                                  <path
                                    d="M 10 20 C 15.475 20 20 15.473 20 10 C 20 4.518 15.473 0 9.991 0 C 4.516 0 0 4.518 0 10 C 0 15.475 4.527 20 10 20 Z M 10 18.705 C 5.189 18.714 1.287 14.812 1.297 10.001 C 1.28 5.189 5.179 1.281 9.991 1.285 C 14.807 1.28 18.714 5.182 18.714 9.999 C 18.719 14.811 14.813 18.712 10 18.702 Z M 9.941 6.242 C 10.559 6.242 11.038 5.763 11.038 5.156 C 11.043 4.547 10.549 4.053 9.94 4.058 C 9.334 4.057 8.842 4.55 8.844 5.156 C 8.843 5.761 9.337 6.249 9.941 6.242 Z M 8.216 15.444 L 12.303 15.444 C 12.623 15.444 12.871 15.204 12.871 14.895 C 12.87 14.584 12.615 14.334 12.303 14.338 L 10.868 14.338 L 10.868 8.754 C 10.868 8.346 10.658 8.065 10.269 8.065 L 8.345 8.065 C 7.919 8.045 7.631 8.493 7.826 8.872 C 7.925 9.065 8.128 9.182 8.345 9.172 L 9.652 9.172 L 9.652 14.338 L 8.216 14.338 C 7.905 14.334 7.649 14.584 7.648 14.895 C 7.648 15.204 7.897 15.444 8.216 15.444 Z"
                                  />
                                </svg>
                              </div>
                            </div>
                          </p>
                          <p
                            class="MuiTypography-root MuiTypography-body1 Metric-metric css-69sme-MuiTypography-root"
                            style="width: 100%;"
                          >
                            <span
                              class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1l7q9tc-MuiSkeleton-root"
                              style="width: 100%;"
                            />
                          </p>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="MuiBox-root css-1yjvs5a"
            >
              <div
                class="MuiBox-root css-70qvj9"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 css-69sme-MuiTypography-root"
                >
                  Unwrap
                   from
                </p>
                <div
                  class="MuiFormControl-root css-1nrlq1o-MuiFormControl-root"
                  style="margin: 0px 10px;"
                >
                  <div
                    class="MuiInputBase-root MuiInput-root MuiInputBase-colorPrimary Mui-focused MuiInputBase-formControl css-1b50vqc-MuiInputBase-root-MuiInput-root-MuiSelect-root"
                  >
                    <div
                      aria-expanded="false"
                      aria-haspopup="listbox"
                      aria-labelledby="asset-select-first"
                      class="MuiSelect-select MuiSelect-standard MuiInputBase-input MuiInput-input css-wa1hpy-MuiSelect-select-MuiInputBase-input-MuiInput-input"
                      id="asset-select-first"
                      role="button"
                      tabindex="0"
                    >
                      gOHM
                    </div>
                    <input
                      aria-hidden="true"
                      class="MuiSelect-nativeInput css-yf8vq0-MuiSelect-nativeInput"
                      tabindex="-1"
                      value="gOHM"
                    />
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall MuiSelect-icon MuiSelect-iconStandard css-1xyntl6-MuiSvgIcon-root-MuiSelect-icon"
                      data-testid="ArrowDropDownIcon"
                      focusable="false"
                      viewBox="0 0 20 20"
                    >
                      <path
                        d="M7 10l5 5 5-5z"
                      />
                    </svg>
                  </div>
                </div>
                <p
                  class="MuiTypography-root MuiTypography-body1 css-69sme-MuiTypography-root"
                >
                  <span
                    class="asset-select-label"
                  >
                     to 
                  </span>
                </p>
                <div
                  class="MuiFormControl-root css-1nrlq1o-MuiFormControl-root"
                  style="margin: 0px 10px;"
                >
                  <div
                    class="MuiInputBase-root MuiInput-root MuiInputBase-colorPrimary MuiInputBase-formControl css-1b50vqc-MuiInputBase-root-MuiInput-root-MuiSelect-root"
                    data-testid="second-asset-select"
                  >
                    <div
                      aria-expanded="false"
                      aria-haspopup="listbox"
                      aria-labelledby="asset-select"
                      class="MuiSelect-select MuiSelect-standard MuiInputBase-input MuiInput-input css-wa1hpy-MuiSelect-select-MuiInputBase-input-MuiInput-input"
                      id="asset-select"
                      role="button"
                      tabindex="0"
                    >
                      sOHM
                    </div>
                    <input
                      aria-hidden="true"
                      class="MuiSelect-nativeInput css-yf8vq0-MuiSelect-nativeInput"
                      tabindex="-1"
                      value="sOHM"
                    />
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall MuiSelect-icon MuiSelect-iconStandard css-1xyntl6-MuiSvgIcon-root-MuiSelect-icon"
                      data-testid="ArrowDropDownIcon"
                      focusable="false"
                      viewBox="0 0 20 20"
                    >
                      <path
                        d="M7 10l5 5 5-5z"
                      />
                    </svg>
                  </div>
                </div>
              </div>
              <div
                class="MuiBox-root css-1xlzx9v"
              >
                <div
                  class="css-1jiamkk"
                >
                  <form
                    class="stake-tab-panel wrap-page"
                  >
                    <div
                      class="MuiGrid-root MuiGrid-container css-19lq5o1-MuiGrid-root"
                    >
                      <div
                        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-8 css-1h5sa9j-MuiGrid-root"
                        style="padding-right: 4px;"
                      >
                        <div
                          class="MuiFormControl-root MuiFormControl-fullWidth Input-root css-3tw635-MuiFormControl-root"
                        >
                          <div
                            class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl MuiInputBase-adornedEnd css-eqe2qg-MuiInputBase-root-MuiOutlinedInput-root"
                          >
                            <input
                              aria-invalid="false"
                              class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedEnd css-1vvkud8-MuiInputBase-input-MuiOutlinedInput-input"
                              id="amount-input"
                              name="amount-input"
                              placeholder="Enter an amount of gOHM"
                              type="text"
                              value=""
                            />
                            <div
                              class="MuiInputAdornment-root MuiInputAdornment-positionEnd MuiInputAdornment-outlined MuiInputAdornment-sizeMedium css-1laqsz7-MuiInputAdornment-root"
                            >
                              <button
                                class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-disableElevation  css-rmjmo8-MuiButtonBase-root-MuiButton-root"
                                tabindex="0"
                                type="button"
                              >
                                Max
                              </button>
                            </div>
                            <fieldset
                              aria-hidden="true"
                              class="MuiOutlinedInput-notchedOutline css-1csa3kb-MuiOutlinedInput-notchedOutline"
                            >
                              <legend
                                class="css-hdw1oc"
                              >
                                <span
                                  class="notranslate"
                                >
                                  ​
                                </span>
                              </legend>
                            </fieldset>
                          </div>
                        </div>
                      </div>
                      <div
                        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 css-1ss4yyi-MuiGrid-root"
                      >
                        <button
                          class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-disableElevation MuiButton-fullWidth  css-8aw5i7-MuiButtonBase-root-MuiButton-root"
                          style="height: 43px;"
                          tabindex="0"
                          type="submit"
                        >
                          Unwrap from gOHM
                        </button>
                      </div>
                    </div>
                  </form>
                </div>
              </div>
            </div>
            <div
              class="DataRow-root data-row css-19fvmib"
            >
              <div
                class="MuiBox-root css-1xhj18k"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 css-4xvy19-MuiTypography-root"
                >
                  sOHM Balance
                </p>
              </div>
              <p
                class="MuiTypography-root MuiTypography-body1 css-4xvy19-MuiTypography-root"
                style="text-align: right;"
              >
                <span
                  class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1l7q9tc-MuiSkeleton-root"
                  style="width: 80px;"
                />
              </p>
            </div>
            <div
              class="DataRow-root data-row css-19fvmib"
            >
              <div
                class="MuiBox-root css-1xhj18k"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 css-4xvy19-MuiTypography-root"
                >
                  gOHM Balance
                </p>
              </div>
              <p
                class="MuiTypography-root MuiTypography-body1 css-4xvy19-MuiTypography-root"
                style="text-align: right;"
              >
                <span
                  class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1l7q9tc-MuiSkeleton-root"
                  style="width: 80px;"
                />
              </p>
            </div>
            <hr
              class="MuiDivider-root MuiDivider-fullWidth css-9mgopn-MuiDivider-root"
            />
            <div
              class="MuiBox-root css-na3zg8"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 css-69sme-MuiTypography-root"
                style="margin: 15px 0px 10px 0px;"
              >
                Got wsOHM on Avalanche or Arbitrum? Click below to switch networks and migrate to gOHM (no bridge required!)
              </p>
              <button
                class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedSecondary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-disableElevation  css-1sigo3z-MuiButtonBase-root-MuiButton-root"
                style="margin: 0.3rem;"
                tabindex="0"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeLarge css-1djwm8g-MuiSvgIcon-root"
                  focusable="false"
                  style="font-size: 28px;"
                  viewBox="0 0 32 32"
                >
                  <path
                    d="M6.104 5.475h19.771v17.981H6.104z"
                    style="fill: #fff; stroke-width: 0.02130493;"
                  />
                  <path
                    d="M32 16c0 8.837-7.163 16-16 16S0 24.837 0 16 7.163 0 16 0s16 7.163 16 16Zm-20.534 6.367H8.361c-.653 0-.975 0-1.171-.126a.79.79 0 0 1-.358-.617c-.012-.232.15-.515.472-1.08L14.97 7.028c.326-.574.49-.86.7-.967a.791.791 0 0 1 .715 0c.208.106.373.393.7.967L18.66 9.78l.008.014c.353.615.531.927.61 1.255.086.358.086.735 0 1.093-.08.33-.256.644-.614 1.27l-4.027 7.119-.01.018c-.355.62-.535.935-.784 1.172-.271.26-.597.448-.955.555-.326.09-.692.09-1.423.09zm7.842 0h4.449c.656 0 .987 0 1.183-.13a.787.787 0 0 0 .358-.62c.011-.225-.146-.497-.455-1.03l-.033-.055-2.228-3.813-.026-.043c-.313-.53-.471-.797-.674-.9a.783.783 0 0 0-.711 0c-.205.106-.37.385-.696.947l-2.22 3.813-.009.013c-.325.56-.487.841-.476 1.071a.796.796 0 0 0 .358.622c.193.125.523.125 1.18.125z"
                    style="clip-rule: evenodd; fill: #e84142; fill-rule: evenodd; stroke-width: 0.02130493;"
                  />
                </svg>
                <h6
                  class="MuiTypography-root MuiTypography-h6 css-rg0wkx-MuiTypography-root"
                  style="margin-left: 8px;"
                >
                  Avalanche
                </h6>
              </button>
              <button
                class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedSecondary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-disableElevation  css-1sigo3z-MuiButtonBase-root-MuiButton-root"
                style="margin: 0.3rem;"
                tabindex="0"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeLarge css-1djwm8g-MuiSvgIcon-root"
                  focusable="false"
                  style="font-size: 28px;"
                  viewBox="0 0 32 32"
                >
                  <ellipse
                    cx="16"
                    cy="16"
                    rx="15.442"
                    ry="15.442"
                    style="fill: rgb(44, 55, 76);"
                  />
                  <g
                    id="Background"
                    transform="matrix(0.063934, 0, 0, 0.063934, 0, 0)"
                  />
                  <g
                    id="Logos_and_symbols"
                    transform="matrix(0.055939, 0, 0, 0.055939, 2.774117, 1.580833)"
                  >
                    <g
                      id="SYMBOL_VER_3"
                    />
                    <g
                      id="SYMBOL_VER_3_3_"
                    />
                    <g
                      id="SYMBOL_VER_4"
                    />
                    <g
                      id="SYMBOL_VER_4_1_"
                    >
                      <g
                        id="SYMBOL_VER_4_3_"
                      />
                    </g>
                    <g
                      id="SYMBOL_VER_5_1_"
                    />
                    <g
                      id="off_2_1_"
                    />
                    <g
                      id="VER_3_1_"
                    >
                      <g
                        id="SYMBOL_VER_2_1_"
                      />
                    </g>
                    <g
                      id="VER_3"
                    >
                      <g
                        id="SYMBOL_VER_2"
                      />
                    </g>
                    <g
                      id="off_2"
                    />
                    <g
                      id="SYMBOL_VER_5"
                    />
                    <g
                      id="SYMBOL_VER_1"
                    />
                    <g
                      id="SYMBOL_VER_1_1_"
                    />
                    <g
                      id="SYMBOL_VER_1-1_3_"
                    />
                    <g
                      id="SYMBOL_VER_1-1_2_"
                    />
                    <g
                      id="SYMBOL_VER_1-1"
                    />
                    <g
                      id="SYMBOL_VER_1-1_1_"
                    >
                      <g
                        id="_x31_-3"
                      />
                      <g
                        id="Symbol_-_Original_14_"
                      >
                        <path
                          d="M291.134,237.469l35.654-60.5l96.103,149.684l0.046,28.727l-0.313-197.672
      c-0.228-4.832-2.794-9.252-6.887-11.859L242.715,46.324c-4.045-1.99-9.18-1.967-13.22,0.063c-0.546,0.272-1.06,0.57-1.548,0.895
      l-0.604,0.379L59.399,144.983l-0.651,0.296c-0.838,0.385-1.686,0.875-2.48,1.444c-3.185,2.283-5.299,5.66-5.983,9.448
      c-0.103,0.574-0.179,1.158-0.214,1.749l0.264,161.083l89.515-138.745c11.271-18.397,35.825-24.323,58.62-24.001l26.753,0.706
      L67.588,409.765l18.582,10.697L245.692,157.22l70.51-0.256L157.091,426.849l66.306,38.138l7.922,4.556
      c3.351,1.362,7.302,1.431,10.681,0.21l175.453-101.678l-33.544,19.438L291.134,237.469z M304.736,433.395l-66.969-105.108
      l40.881-69.371l87.952,138.628L304.736,433.395z"
                          fill="#2D374B"
                        />
                        <polygon
                          fill="#28A0F0"
                          points="237.768,328.286 304.736,433.395 366.601,397.543 278.648,258.915 			"
                        />
                        <path
                          d="M422.937,355.379l-0.046-28.727l-96.103-149.684l-35.654,60.5l92.774,150.043l33.544-19.438
      c3.29-2.673,5.281-6.594,5.49-10.825L422.937,355.379z"
                          fill="#28A0F0"
                        />
                        <path
                          d="M20.219,382.469l47.369,27.296l157.634-252.801l-26.753-0.706c-22.795-0.322-47.35,5.604-58.62,24.001
      L50.334,319.004l-30.115,46.271V382.469z"
                          fill="#FFFFFF"
                        />
                        <polygon
                          fill="#FFFFFF"
                          points="316.202,156.964 245.692,157.22 86.17,420.462 141.928,452.565 157.091,426.849 			"
                        />
                        <path
                          d="M452.65,156.601c-0.59-14.746-8.574-28.245-21.08-36.104L256.28,19.692
      c-12.371-6.229-27.825-6.237-40.218-0.004c-1.465,0.739-170.465,98.752-170.465,98.752c-2.339,1.122-4.592,2.458-6.711,3.975
      c-11.164,8.001-17.969,20.435-18.668,34.095v208.765l30.115-46.271L50.07,157.921c0.035-0.589,0.109-1.169,0.214-1.741
      c0.681-3.79,2.797-7.171,5.983-9.456c0.795-0.569,172.682-100.064,173.228-100.337c4.04-2.029,9.175-2.053,13.22-0.063
      l173.022,99.523c4.093,2.607,6.659,7.027,6.887,11.859v199.542c-0.209,4.231-1.882,8.152-5.172,10.825l-33.544,19.438
      l-17.308,10.031l-61.864,35.852l-62.737,36.357c-3.379,1.221-7.33,1.152-10.681-0.21l-74.228-42.693l-15.163,25.717
      l66.706,38.406c2.206,1.255,4.171,2.367,5.784,3.272c2.497,1.4,4.199,2.337,4.8,2.629c4.741,2.303,11.563,3.643,17.71,3.643
      c5.636,0,11.132-1.035,16.332-3.072l182.225-105.531c10.459-8.104,16.612-20.325,17.166-33.564V156.601z"
                          fill="#96BEDC"
                        />
                      </g>
                      <g
                        id="Symbol_-_Original_13_"
                      />
                      <g
                        id="Symbol_-_Original_6_"
                      />
                      <g
                        id="Symbol_-_Original_4_"
                      />
                      <g
                        id="One_color_version_-_White_3_"
                      >
                        <g
                          id="Symbol_-_Original_15_"
                        />
                      </g>
                      <g
                        id="One_color_version_-_White"
                      >
                        <g
                          id="Symbol_-_Original"
                        />
                      </g>
                      <g
                        id="Symbol_-_Monochromatic_3_"
                      >
                        <g
                          id="_x33__7_"
                        />
                      </g>
                      <g
                        id="Symbol_-_Monochromatic"
                      >
                        <g
                          id="_x33__3_"
                        />
                      </g>
                      <g
                        id="_x33__2_"
                      />
                      <g
                        id="_x33__1_"
                      />
                      <g
                        id="_x33_"
                      />
                      <g
                        id="Symbol_-_Original_10_"
                      />
                      <g
                        id="Symbol_-_Original_1_"
                      />
                      <g
                        id="Symbol_-_Original_2_"
                      />
                      <g
                        id="_x34__1_"
                      />
                      <g
                        id="Symbol_-_Monochromatic_2_"
                      >
                        <g
                          id="_x33__6_"
                        />
                      </g>
                      <g
                        id="One_color_version_-_White_2_"
                      >
                        <g
                          id="Symbol_-_Original_11_"
                        />
                      </g>
                      <g
                        id="Symbol_-_Original_5_"
                      >
                        <g
                          id="Symbol_-_Original_12_"
                        />
                      </g>
                      <g
                        id="One_color_version_-_White_1_"
                      >
                        <g
                          id="Symbol_-_Original_9_"
                        />
                      </g>
                    </g>
                    <g
                      id="SYMBOL_VER_1_2_"
                    >
                      <g
                        id="SYMBOL_VER_2_4_"
                      />
                      <g
                        id="SYMBOL_VER_2-1-1_1_"
                      />
                      <g
                        id="SYMBOL_VER_2-2-1_1_"
                      />
                      <g
                        id="SYMBOL_VER_2-3-1_4_"
                      />
                      <g
                        id="New_Symbol_1_"
                      >
                        <g
                          id="SYMBOL_VER_2-3-1_3_"
                        />
                      </g>
                      <g
                        id="New_Symbol"
                      >
                        <g
                          id="SYMBOL_VER_2-3-1_1_"
                        />
                      </g>
                    </g>
                    <g
                      id="SYMBOL_VER_2_2_"
                    />
                    <g
                      id="SYMBOL_VER_4_2_"
                    />
                    <g
                      id="SYMBOL_VER_3_2_"
                    />
                    <g
                      id="SYMBOL_VER_3_1_"
                    />
                    <g
                      id="SYMBOL_VER_1-1-1_1_"
                    />
                    <g
                      id="SYMBOL_VER_1-1-1"
                    />
                    <g
                      id="SYMBOL_VER_1-1-1_2_2_"
                    />
                    <g
                      id="SYMBOL_VER_1-1-1_2"
                    />
                    <g
                      id="SYMBOL_VER_1-1-1_2_1_"
                    />
                    <g
                      id="Symbol_-_Original_7_"
                    />
                    <g
                      id="Symbol_-_Original_8_"
                    />
                    <g
                      id="SYMBOL_VER_2-1-1"
                    />
                    <g
                      id="SYMBOL_VER_2-2-1"
                    />
                    <g
                      id="SYMBOL_VER_2-3-1"
                    />
                    <g
                      id="SYMBOL_VER_5-1_1_"
                    />
                    <g
                      id="SYMBOL_VER_5-1"
                    />
                    <g
                      id="SYMBOL_VER_5-2_1_"
                    />
                    <g
                      id="SYMBOL_VER_5-2"
                    />
                    <g
                      id="Symbol_-_Monochromatic_1_"
                    >
                      <g
                        id="_x33__4_"
                      />
                    </g>
                  </g>
                </svg>
                <h6
                  class="MuiTypography-root MuiTypography-h6 css-rg0wkx-MuiTypography-root"
                  style="margin-left: 8px;"
                >
                  Arbitrum
                </h6>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Wrap Input Area Should Render Input when has Token Approval 1`] = `
<div>
  <div
    data-rk=""
  >
    <style>
      [data-rk]{--rk-blurs-modalOverlay:blur(0px);--rk-fonts-body:SFRounded, ui-rounded, "SF Pro Rounded", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";--rk-radii-actionButton:9999px;--rk-radii-connectButton:12px;--rk-radii-menuButton:12px;--rk-radii-modal:24px;--rk-radii-modalMobile:28px;--rk-colors-accentColor:#0E76FD;--rk-colors-accentColorForeground:#FFF;--rk-colors-actionButtonBorder:rgba(0, 0, 0, 0.04);--rk-colors-actionButtonBorderMobile:rgba(0, 0, 0, 0.06);--rk-colors-actionButtonSecondaryBackground:rgba(0, 0, 0, 0.06);--rk-colors-closeButton:rgba(60, 66, 66, 0.8);--rk-colors-closeButtonBackground:rgba(0, 0, 0, 0.06);--rk-colors-connectButtonBackground:#FFF;--rk-colors-connectButtonBackgroundError:#FF494A;--rk-colors-connectButtonInnerBackground:linear-gradient(0deg, rgba(0, 0, 0, 0.03), rgba(0, 0, 0, 0.06));--rk-colors-connectButtonText:#25292E;--rk-colors-connectButtonTextError:#FFF;--rk-colors-connectionIndicator:#30E000;--rk-colors-error:#FF494A;--rk-colors-generalBorder:rgba(0, 0, 0, 0.06);--rk-colors-generalBorderDim:rgba(0, 0, 0, 0.03);--rk-colors-menuItemBackground:rgba(60, 66, 66, 0.1);--rk-colors-modalBackdrop:rgba(0, 0, 0, 0.3);--rk-colors-modalBackground:#FFF;--rk-colors-modalBorder:transparent;--rk-colors-modalText:#25292E;--rk-colors-modalTextDim:rgba(60, 66, 66, 0.3);--rk-colors-modalTextSecondary:rgba(60, 66, 66, 0.6);--rk-colors-profileAction:#FFF;--rk-colors-profileActionHover:rgba(255, 255, 255, 0.5);--rk-colors-profileForeground:rgba(60, 66, 66, 0.06);--rk-colors-selectedOptionBorder:rgba(60, 66, 66, 0.1);--rk-colors-standby:#FFD641;--rk-shadows-connectButton:0px 4px 12px rgba(0, 0, 0, 0.1);--rk-shadows-dialog:0px 8px 32px rgba(0, 0, 0, 0.32);--rk-shadows-profileDetailsAction:0px 2px 6px rgba(37, 41, 46, 0.04);--rk-shadows-selectedOption:0px 2px 6px rgba(0, 0, 0, 0.24);--rk-shadows-selectedWallet:0px 2px 6px rgba(0, 0, 0, 0.12);--rk-shadows-walletLogo:0px 2px 16px rgba(0, 0, 0, 0.16);}
    </style>
    <div>
      <div />
    </div>
    <div
      id="stake-view"
    >
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 Paper-root  css-e20x9a-MuiPaper-root"
        style="transform: none; webkit-transition: transform 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: transform 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
      >
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 MuiGrid-direction-xs-column css-1oficnd-MuiGrid-root"
        >
          <div
            class="MuiGrid-root MuiGrid-item card-header css-ieinjk-MuiGrid-root"
          >
            <div
              class="MuiBox-root css-gg4vpm"
            >
              <div
                class="MuiBox-root css-1xhj18k"
              >
                <h5
                  class="MuiTypography-root MuiTypography-h5 header-text css-903ewo-MuiTypography-root"
                >
                  Wrap / Unwrap
                </h5>
              </div>
              <div
                class="top-right"
              >
                <a
                  aria-label="wsohm-wut"
                  class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-ao3601-MuiTypography-root-MuiLink-root"
                  href="https://docs.olympusdao.finance/main/contracts/tokens#gohm"
                  rel="noopener noreferrer"
                  style="text-decoration: none;"
                  target="_blank"
                >
                  <div
                    class="MuiBox-root css-70qvj9"
                  >
                    <p
                      class="MuiTypography-root MuiTypography-body1 css-69sme-MuiTypography-root"
                    >
                      gOHM
                    </p>
                     
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-1fx2bp7-MuiSvgIcon-root"
                      focusable="false"
                      style="margin-left: 5px;"
                      viewBox="0 0 20 20"
                    >
                      <path
                        d="M4.297 17.445h9.539c1.523 0 2.305-.78 2.305-2.28v-9.58c0-1.507-.782-2.288-2.305-2.288h-9.54c-1.523 0-2.304.773-2.304 2.289v9.578c0 1.508.781 2.281 2.305 2.281Zm.016-.968c-.875 0-1.352-.461-1.352-1.368V5.633c0-.899.477-1.367 1.352-1.367h9.5c.867 0 1.359.468 1.359 1.367v9.476c0 .907-.492 1.368-1.36 1.368h-9.5Zm7.296-4.235c.266 0 .438-.195.438-.476V7.867c0-.344-.188-.492-.492-.492H7.64c-.29 0-.47.172-.47.438 0 .265.188.445.477.445H9.53l1.133-.078-1.055.992-3.382 3.383a.476.476 0 0 0-.149.328c0 .273.18.453.453.453a.47.47 0 0 0 .344-.149L10.25 9.82l.984-1.047-.078 1.282v1.718c0 .29.18.47.453.47Z"
                      />
                    </svg>
                  </div>
                </a>
              </div>
            </div>
          </div>
          <div
            class="MuiGrid-root MuiGrid-item css-ieinjk-MuiGrid-root"
          >
            <div
              class="MuiBox-root css-15i1vgz"
            >
              <div
                class="MuiGrid-root css-1xcwb1n-MuiGrid-root"
              >
                <div
                  class="MuiBox-root css-rjww1q"
                >
                  <div
                    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-1djfsf6-MuiGrid-root"
                  >
                    <div
                      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 css-1ss4yyi-MuiGrid-root"
                    >
                      <div
                        class="Metric-root  css-1xkrsym"
                      >
                        <div
                          class="MuiBox-root css-g45inh"
                        >
                          <p
                            class="MuiTypography-root MuiTypography-body1 Metric-label css-tlko1g-MuiTypography-root"
                          >
                            sOHM Price
                          </p>
                          <p
                            class="MuiTypography-root MuiTypography-body1 Metric-metric css-69sme-MuiTypography-root"
                            style="width: 100%;"
                          >
                            <span
                              class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1l7q9tc-MuiSkeleton-root"
                              style="width: 100%;"
                            />
                          </p>
                        </div>
                      </div>
                    </div>
                    <div
                      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 css-1ss4yyi-MuiGrid-root"
                    >
                      <div
                        class="Metric-root  css-1xkrsym"
                      >
                        <div
                          class="MuiBox-root css-g45inh"
                        >
                          <p
                            class="MuiTypography-root MuiTypography-body1 Metric-label css-tlko1g-MuiTypography-root"
                          >
                            Current Index
                            <div
                              class="MuiBox-root css-w341jy"
                              style="font-size: 14px;"
                            >
                              <div
                                class="MuiBox-root css-0"
                                style="display: inline-flex; justify-content: center; align-self: center;"
                              >
                                <svg
                                  aria-hidden="true"
                                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall info-icon css-1fx2bp7-MuiSvgIcon-root"
                                  focusable="false"
                                  style="margin: 0px 5px; font-size: 1em;"
                                  viewBox="0 0 20 20"
                                >
                                  <path
                                    d="M 10 20 C 15.475 20 20 15.473 20 10 C 20 4.518 15.473 0 9.991 0 C 4.516 0 0 4.518 0 10 C 0 15.475 4.527 20 10 20 Z M 10 18.705 C 5.189 18.714 1.287 14.812 1.297 10.001 C 1.28 5.189 5.179 1.281 9.991 1.285 C 14.807 1.28 18.714 5.182 18.714 9.999 C 18.719 14.811 14.813 18.712 10 18.702 Z M 9.941 6.242 C 10.559 6.242 11.038 5.763 11.038 5.156 C 11.043 4.547 10.549 4.053 9.94 4.058 C 9.334 4.057 8.842 4.55 8.844 5.156 C 8.843 5.761 9.337 6.249 9.941 6.242 Z M 8.216 15.444 L 12.303 15.444 C 12.623 15.444 12.871 15.204 12.871 14.895 C 12.87 14.584 12.615 14.334 12.303 14.338 L 10.868 14.338 L 10.868 8.754 C 10.868 8.346 10.658 8.065 10.269 8.065 L 8.345 8.065 C 7.919 8.045 7.631 8.493 7.826 8.872 C 7.925 9.065 8.128 9.182 8.345 9.172 L 9.652 9.172 L 9.652 14.338 L 8.216 14.338 C 7.905 14.334 7.649 14.584 7.648 14.895 C 7.648 15.204 7.897 15.444 8.216 15.444 Z"
                                  />
                                </svg>
                              </div>
                            </div>
                          </p>
                          <p
                            class="MuiTypography-root MuiTypography-body1 Metric-metric css-69sme-MuiTypography-root"
                            style="width: 100%;"
                          >
                            <span
                              class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1l7q9tc-MuiSkeleton-root"
                              style="width: 100%;"
                            />
                          </p>
                        </div>
                      </div>
                    </div>
                    <div
                      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 css-1ss4yyi-MuiGrid-root"
                    >
                      <div
                        class="Metric-root  css-1xkrsym"
                      >
                        <div
                          class="MuiBox-root css-g45inh"
                        >
                          <p
                            class="MuiTypography-root MuiTypography-body1 Metric-label css-tlko1g-MuiTypography-root"
                          >
                            gOHM Price
                            <div
                              class="MuiBox-root css-w341jy"
                              style="font-size: 14px;"
                            >
                              <div
                                class="MuiBox-root css-0"
                                style="display: inline-flex; justify-content: center; align-self: center;"
                              >
                                <svg
                                  aria-hidden="true"
                                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall info-icon css-1fx2bp7-MuiSvgIcon-root"
                                  focusable="false"
                                  style="margin: 0px 5px; font-size: 1em;"
                                  viewBox="0 0 20 20"
                                >
                                  <path
                                    d="M 10 20 C 15.475 20 20 15.473 20 10 C 20 4.518 15.473 0 9.991 0 C 4.516 0 0 4.518 0 10 C 0 15.475 4.527 20 10 20 Z M 10 18.705 C 5.189 18.714 1.287 14.812 1.297 10.001 C 1.28 5.189 5.179 1.281 9.991 1.285 C 14.807 1.28 18.714 5.182 18.714 9.999 C 18.719 14.811 14.813 18.712 10 18.702 Z M 9.941 6.242 C 10.559 6.242 11.038 5.763 11.038 5.156 C 11.043 4.547 10.549 4.053 9.94 4.058 C 9.334 4.057 8.842 4.55 8.844 5.156 C 8.843 5.761 9.337 6.249 9.941 6.242 Z M 8.216 15.444 L 12.303 15.444 C 12.623 15.444 12.871 15.204 12.871 14.895 C 12.87 14.584 12.615 14.334 12.303 14.338 L 10.868 14.338 L 10.868 8.754 C 10.868 8.346 10.658 8.065 10.269 8.065 L 8.345 8.065 C 7.919 8.045 7.631 8.493 7.826 8.872 C 7.925 9.065 8.128 9.182 8.345 9.172 L 9.652 9.172 L 9.652 14.338 L 8.216 14.338 C 7.905 14.334 7.649 14.584 7.648 14.895 C 7.648 15.204 7.897 15.444 8.216 15.444 Z"
                                  />
                                </svg>
                              </div>
                            </div>
                          </p>
                          <p
                            class="MuiTypography-root MuiTypography-body1 Metric-metric css-69sme-MuiTypography-root"
                            style="width: 100%;"
                          >
                            <span
                              class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1l7q9tc-MuiSkeleton-root"
                              style="width: 100%;"
                            />
                          </p>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="MuiBox-root css-1yjvs5a"
            >
              <div
                class="MuiBox-root css-70qvj9"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 css-69sme-MuiTypography-root"
                >
                  Wrap
                   from
                </p>
                <div
                  class="MuiFormControl-root css-1nrlq1o-MuiFormControl-root"
                  style="margin: 0px 10px;"
                >
                  <div
                    class="MuiInputBase-root MuiInput-root MuiInputBase-colorPrimary MuiInputBase-formControl css-1b50vqc-MuiInputBase-root-MuiInput-root-MuiSelect-root"
                  >
                    <div
                      aria-expanded="false"
                      aria-haspopup="listbox"
                      aria-labelledby="asset-select-first"
                      class="MuiSelect-select MuiSelect-standard MuiInputBase-input MuiInput-input css-wa1hpy-MuiSelect-select-MuiInputBase-input-MuiInput-input"
                      id="asset-select-first"
                      role="button"
                      tabindex="0"
                    >
                      sOHM
                    </div>
                    <input
                      aria-hidden="true"
                      class="MuiSelect-nativeInput css-yf8vq0-MuiSelect-nativeInput"
                      tabindex="-1"
                      value="sOHM"
                    />
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall MuiSelect-icon MuiSelect-iconStandard css-1xyntl6-MuiSvgIcon-root-MuiSelect-icon"
                      data-testid="ArrowDropDownIcon"
                      focusable="false"
                      viewBox="0 0 20 20"
                    >
                      <path
                        d="M7 10l5 5 5-5z"
                      />
                    </svg>
                  </div>
                </div>
                <p
                  class="MuiTypography-root MuiTypography-body1 css-69sme-MuiTypography-root"
                >
                  <span
                    class="asset-select-label"
                  >
                     to 
                  </span>
                </p>
                <div
                  class="MuiFormControl-root css-1nrlq1o-MuiFormControl-root"
                  style="margin: 0px 10px;"
                >
                  <div
                    class="MuiInputBase-root MuiInput-root MuiInputBase-colorPrimary MuiInputBase-formControl css-1b50vqc-MuiInputBase-root-MuiInput-root-MuiSelect-root"
                    data-testid="second-asset-select"
                  >
                    <div
                      aria-expanded="false"
                      aria-haspopup="listbox"
                      aria-labelledby="asset-select"
                      class="MuiSelect-select MuiSelect-standard MuiInputBase-input MuiInput-input css-wa1hpy-MuiSelect-select-MuiInputBase-input-MuiInput-input"
                      id="asset-select"
                      role="button"
                      tabindex="0"
                    >
                      gOHM
                    </div>
                    <input
                      aria-hidden="true"
                      class="MuiSelect-nativeInput css-yf8vq0-MuiSelect-nativeInput"
                      tabindex="-1"
                      value="gOHM"
                    />
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall MuiSelect-icon MuiSelect-iconStandard css-1xyntl6-MuiSvgIcon-root-MuiSelect-icon"
                      data-testid="ArrowDropDownIcon"
                      focusable="false"
                      viewBox="0 0 20 20"
                    >
                      <path
                        d="M7 10l5 5 5-5z"
                      />
                    </svg>
                  </div>
                </div>
              </div>
              <div
                class="MuiBox-root css-1xlzx9v"
              >
                <div
                  class="css-1jiamkk"
                >
                  <form
                    class="stake-tab-panel wrap-page"
                  >
                    <div
                      class="MuiGrid-root MuiGrid-container css-19lq5o1-MuiGrid-root"
                    >
                      <div
                        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-8 css-1h5sa9j-MuiGrid-root"
                        style="padding-right: 4px;"
                      >
                        <div
                          class="MuiFormControl-root MuiFormControl-fullWidth Input-root css-3tw635-MuiFormControl-root"
                        >
                          <div
                            class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl MuiInputBase-adornedEnd css-eqe2qg-MuiInputBase-root-MuiOutlinedInput-root"
                          >
                            <input
                              aria-invalid="false"
                              class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedEnd css-1vvkud8-MuiInputBase-input-MuiOutlinedInput-input"
                              id="amount-input"
                              name="amount-input"
                              placeholder="Enter an amount of sOHM"
                              type="text"
                              value="1"
                            />
                            <div
                              class="MuiInputAdornment-root MuiInputAdornment-positionEnd MuiInputAdornment-outlined MuiInputAdornment-sizeMedium css-1laqsz7-MuiInputAdornment-root"
                            >
                              <button
                                class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-disableElevation  css-rmjmo8-MuiButtonBase-root-MuiButton-root"
                                tabindex="0"
                                type="button"
                              >
                                Max
                              </button>
                            </div>
                            <fieldset
                              aria-hidden="true"
                              class="MuiOutlinedInput-notchedOutline css-1csa3kb-MuiOutlinedInput-notchedOutline"
                            >
                              <legend
                                class="css-hdw1oc"
                              >
                                <span
                                  class="notranslate"
                                >
                                  ​
                                </span>
                              </legend>
                            </fieldset>
                          </div>
                        </div>
                      </div>
                      <div
                        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 css-1ss4yyi-MuiGrid-root"
                      >
                        <button
                          class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-disableElevation MuiButton-fullWidth  css-8aw5i7-MuiButtonBase-root-MuiButton-root"
                          style="height: 43px;"
                          tabindex="0"
                          type="submit"
                        >
                          Wrap to gOHM
                        </button>
                      </div>
                    </div>
                  </form>
                </div>
              </div>
            </div>
            <div
              class="DataRow-root data-row css-19fvmib"
            >
              <div
                class="MuiBox-root css-1xhj18k"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 css-4xvy19-MuiTypography-root"
                >
                  sOHM Balance
                </p>
              </div>
              <p
                class="MuiTypography-root MuiTypography-body1 css-4xvy19-MuiTypography-root"
                style="text-align: right;"
              >
                <span
                  class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1l7q9tc-MuiSkeleton-root"
                  style="width: 80px;"
                />
              </p>
            </div>
            <div
              class="DataRow-root data-row css-19fvmib"
            >
              <div
                class="MuiBox-root css-1xhj18k"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 css-4xvy19-MuiTypography-root"
                >
                  gOHM Balance
                </p>
              </div>
              <p
                class="MuiTypography-root MuiTypography-body1 css-4xvy19-MuiTypography-root"
                style="text-align: right;"
              >
                <span
                  class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1l7q9tc-MuiSkeleton-root"
                  style="width: 80px;"
                />
              </p>
            </div>
            <hr
              class="MuiDivider-root MuiDivider-fullWidth css-9mgopn-MuiDivider-root"
            />
            <div
              class="MuiBox-root css-na3zg8"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 css-69sme-MuiTypography-root"
                style="margin: 15px 0px 10px 0px;"
              >
                Got wsOHM on Avalanche or Arbitrum? Click below to switch networks and migrate to gOHM (no bridge required!)
              </p>
              <button
                class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedSecondary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-disableElevation  css-1sigo3z-MuiButtonBase-root-MuiButton-root"
                style="margin: 0.3rem;"
                tabindex="0"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeLarge css-1djwm8g-MuiSvgIcon-root"
                  focusable="false"
                  style="font-size: 28px;"
                  viewBox="0 0 32 32"
                >
                  <path
                    d="M6.104 5.475h19.771v17.981H6.104z"
                    style="fill: #fff; stroke-width: 0.02130493;"
                  />
                  <path
                    d="M32 16c0 8.837-7.163 16-16 16S0 24.837 0 16 7.163 0 16 0s16 7.163 16 16Zm-20.534 6.367H8.361c-.653 0-.975 0-1.171-.126a.79.79 0 0 1-.358-.617c-.012-.232.15-.515.472-1.08L14.97 7.028c.326-.574.49-.86.7-.967a.791.791 0 0 1 .715 0c.208.106.373.393.7.967L18.66 9.78l.008.014c.353.615.531.927.61 1.255.086.358.086.735 0 1.093-.08.33-.256.644-.614 1.27l-4.027 7.119-.01.018c-.355.62-.535.935-.784 1.172-.271.26-.597.448-.955.555-.326.09-.692.09-1.423.09zm7.842 0h4.449c.656 0 .987 0 1.183-.13a.787.787 0 0 0 .358-.62c.011-.225-.146-.497-.455-1.03l-.033-.055-2.228-3.813-.026-.043c-.313-.53-.471-.797-.674-.9a.783.783 0 0 0-.711 0c-.205.106-.37.385-.696.947l-2.22 3.813-.009.013c-.325.56-.487.841-.476 1.071a.796.796 0 0 0 .358.622c.193.125.523.125 1.18.125z"
                    style="clip-rule: evenodd; fill: #e84142; fill-rule: evenodd; stroke-width: 0.02130493;"
                  />
                </svg>
                <h6
                  class="MuiTypography-root MuiTypography-h6 css-rg0wkx-MuiTypography-root"
                  style="margin-left: 8px;"
                >
                  Avalanche
                </h6>
              </button>
              <button
                class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedSecondary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-disableElevation  css-1sigo3z-MuiButtonBase-root-MuiButton-root"
                style="margin: 0.3rem;"
                tabindex="0"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeLarge css-1djwm8g-MuiSvgIcon-root"
                  focusable="false"
                  style="font-size: 28px;"
                  viewBox="0 0 32 32"
                >
                  <ellipse
                    cx="16"
                    cy="16"
                    rx="15.442"
                    ry="15.442"
                    style="fill: rgb(44, 55, 76);"
                  />
                  <g
                    id="Background"
                    transform="matrix(0.063934, 0, 0, 0.063934, 0, 0)"
                  />
                  <g
                    id="Logos_and_symbols"
                    transform="matrix(0.055939, 0, 0, 0.055939, 2.774117, 1.580833)"
                  >
                    <g
                      id="SYMBOL_VER_3"
                    />
                    <g
                      id="SYMBOL_VER_3_3_"
                    />
                    <g
                      id="SYMBOL_VER_4"
                    />
                    <g
                      id="SYMBOL_VER_4_1_"
                    >
                      <g
                        id="SYMBOL_VER_4_3_"
                      />
                    </g>
                    <g
                      id="SYMBOL_VER_5_1_"
                    />
                    <g
                      id="off_2_1_"
                    />
                    <g
                      id="VER_3_1_"
                    >
                      <g
                        id="SYMBOL_VER_2_1_"
                      />
                    </g>
                    <g
                      id="VER_3"
                    >
                      <g
                        id="SYMBOL_VER_2"
                      />
                    </g>
                    <g
                      id="off_2"
                    />
                    <g
                      id="SYMBOL_VER_5"
                    />
                    <g
                      id="SYMBOL_VER_1"
                    />
                    <g
                      id="SYMBOL_VER_1_1_"
                    />
                    <g
                      id="SYMBOL_VER_1-1_3_"
                    />
                    <g
                      id="SYMBOL_VER_1-1_2_"
                    />
                    <g
                      id="SYMBOL_VER_1-1"
                    />
                    <g
                      id="SYMBOL_VER_1-1_1_"
                    >
                      <g
                        id="_x31_-3"
                      />
                      <g
                        id="Symbol_-_Original_14_"
                      >
                        <path
                          d="M291.134,237.469l35.654-60.5l96.103,149.684l0.046,28.727l-0.313-197.672
      c-0.228-4.832-2.794-9.252-6.887-11.859L242.715,46.324c-4.045-1.99-9.18-1.967-13.22,0.063c-0.546,0.272-1.06,0.57-1.548,0.895
      l-0.604,0.379L59.399,144.983l-0.651,0.296c-0.838,0.385-1.686,0.875-2.48,1.444c-3.185,2.283-5.299,5.66-5.983,9.448
      c-0.103,0.574-0.179,1.158-0.214,1.749l0.264,161.083l89.515-138.745c11.271-18.397,35.825-24.323,58.62-24.001l26.753,0.706
      L67.588,409.765l18.582,10.697L245.692,157.22l70.51-0.256L157.091,426.849l66.306,38.138l7.922,4.556
      c3.351,1.362,7.302,1.431,10.681,0.21l175.453-101.678l-33.544,19.438L291.134,237.469z M304.736,433.395l-66.969-105.108
      l40.881-69.371l87.952,138.628L304.736,433.395z"
                          fill="#2D374B"
                        />
                        <polygon
                          fill="#28A0F0"
                          points="237.768,328.286 304.736,433.395 366.601,397.543 278.648,258.915 			"
                        />
                        <path
                          d="M422.937,355.379l-0.046-28.727l-96.103-149.684l-35.654,60.5l92.774,150.043l33.544-19.438
      c3.29-2.673,5.281-6.594,5.49-10.825L422.937,355.379z"
                          fill="#28A0F0"
                        />
                        <path
                          d="M20.219,382.469l47.369,27.296l157.634-252.801l-26.753-0.706c-22.795-0.322-47.35,5.604-58.62,24.001
      L50.334,319.004l-30.115,46.271V382.469z"
                          fill="#FFFFFF"
                        />
                        <polygon
                          fill="#FFFFFF"
                          points="316.202,156.964 245.692,157.22 86.17,420.462 141.928,452.565 157.091,426.849 			"
                        />
                        <path
                          d="M452.65,156.601c-0.59-14.746-8.574-28.245-21.08-36.104L256.28,19.692
      c-12.371-6.229-27.825-6.237-40.218-0.004c-1.465,0.739-170.465,98.752-170.465,98.752c-2.339,1.122-4.592,2.458-6.711,3.975
      c-11.164,8.001-17.969,20.435-18.668,34.095v208.765l30.115-46.271L50.07,157.921c0.035-0.589,0.109-1.169,0.214-1.741
      c0.681-3.79,2.797-7.171,5.983-9.456c0.795-0.569,172.682-100.064,173.228-100.337c4.04-2.029,9.175-2.053,13.22-0.063
      l173.022,99.523c4.093,2.607,6.659,7.027,6.887,11.859v199.542c-0.209,4.231-1.882,8.152-5.172,10.825l-33.544,19.438
      l-17.308,10.031l-61.864,35.852l-62.737,36.357c-3.379,1.221-7.33,1.152-10.681-0.21l-74.228-42.693l-15.163,25.717
      l66.706,38.406c2.206,1.255,4.171,2.367,5.784,3.272c2.497,1.4,4.199,2.337,4.8,2.629c4.741,2.303,11.563,3.643,17.71,3.643
      c5.636,0,11.132-1.035,16.332-3.072l182.225-105.531c10.459-8.104,16.612-20.325,17.166-33.564V156.601z"
                          fill="#96BEDC"
                        />
                      </g>
                      <g
                        id="Symbol_-_Original_13_"
                      />
                      <g
                        id="Symbol_-_Original_6_"
                      />
                      <g
                        id="Symbol_-_Original_4_"
                      />
                      <g
                        id="One_color_version_-_White_3_"
                      >
                        <g
                          id="Symbol_-_Original_15_"
                        />
                      </g>
                      <g
                        id="One_color_version_-_White"
                      >
                        <g
                          id="Symbol_-_Original"
                        />
                      </g>
                      <g
                        id="Symbol_-_Monochromatic_3_"
                      >
                        <g
                          id="_x33__7_"
                        />
                      </g>
                      <g
                        id="Symbol_-_Monochromatic"
                      >
                        <g
                          id="_x33__3_"
                        />
                      </g>
                      <g
                        id="_x33__2_"
                      />
                      <g
                        id="_x33__1_"
                      />
                      <g
                        id="_x33_"
                      />
                      <g
                        id="Symbol_-_Original_10_"
                      />
                      <g
                        id="Symbol_-_Original_1_"
                      />
                      <g
                        id="Symbol_-_Original_2_"
                      />
                      <g
                        id="_x34__1_"
                      />
                      <g
                        id="Symbol_-_Monochromatic_2_"
                      >
                        <g
                          id="_x33__6_"
                        />
                      </g>
                      <g
                        id="One_color_version_-_White_2_"
                      >
                        <g
                          id="Symbol_-_Original_11_"
                        />
                      </g>
                      <g
                        id="Symbol_-_Original_5_"
                      >
                        <g
                          id="Symbol_-_Original_12_"
                        />
                      </g>
                      <g
                        id="One_color_version_-_White_1_"
                      >
                        <g
                          id="Symbol_-_Original_9_"
                        />
                      </g>
                    </g>
                    <g
                      id="SYMBOL_VER_1_2_"
                    >
                      <g
                        id="SYMBOL_VER_2_4_"
                      />
                      <g
                        id="SYMBOL_VER_2-1-1_1_"
                      />
                      <g
                        id="SYMBOL_VER_2-2-1_1_"
                      />
                      <g
                        id="SYMBOL_VER_2-3-1_4_"
                      />
                      <g
                        id="New_Symbol_1_"
                      >
                        <g
                          id="SYMBOL_VER_2-3-1_3_"
                        />
                      </g>
                      <g
                        id="New_Symbol"
                      >
                        <g
                          id="SYMBOL_VER_2-3-1_1_"
                        />
                      </g>
                    </g>
                    <g
                      id="SYMBOL_VER_2_2_"
                    />
                    <g
                      id="SYMBOL_VER_4_2_"
                    />
                    <g
                      id="SYMBOL_VER_3_2_"
                    />
                    <g
                      id="SYMBOL_VER_3_1_"
                    />
                    <g
                      id="SYMBOL_VER_1-1-1_1_"
                    />
                    <g
                      id="SYMBOL_VER_1-1-1"
                    />
                    <g
                      id="SYMBOL_VER_1-1-1_2_2_"
                    />
                    <g
                      id="SYMBOL_VER_1-1-1_2"
                    />
                    <g
                      id="SYMBOL_VER_1-1-1_2_1_"
                    />
                    <g
                      id="Symbol_-_Original_7_"
                    />
                    <g
                      id="Symbol_-_Original_8_"
                    />
                    <g
                      id="SYMBOL_VER_2-1-1"
                    />
                    <g
                      id="SYMBOL_VER_2-2-1"
                    />
                    <g
                      id="SYMBOL_VER_2-3-1"
                    />
                    <g
                      id="SYMBOL_VER_5-1_1_"
                    />
                    <g
                      id="SYMBOL_VER_5-1"
                    />
                    <g
                      id="SYMBOL_VER_5-2_1_"
                    />
                    <g
                      id="SYMBOL_VER_5-2"
                    />
                    <g
                      id="Symbol_-_Monochromatic_1_"
                    >
                      <g
                        id="_x33__4_"
                      />
                    </g>
                  </g>
                </svg>
                <h6
                  class="MuiTypography-root MuiTypography-h6 css-rg0wkx-MuiTypography-root"
                  style="margin-left: 8px;"
                >
                  Arbitrum
                </h6>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
